tests/machine/x/scala/two-sum.error
exit status 1
/workspace/mochi/tests/machine/x/scala/two-sum.scala:1: error: ';' expected but identifier found.
object two-sum {
          ^
one error found
